--- a/sertralin.html
+++ b/sertralin.html
@@ -96,7 +96,7 @@ a.back span { font-size:1.1rem; }
       <div class="section-title">Waa maxay Sertralin? <small>(Hvad er Sertralin?)</small></div>
     </div>
     <ul>
-      <li>Sertralin waa daawo lid ku ah niyad-jabka oo ka tirsan SSRI-yada.</li>
+      <li>Sertralin waa daawo lid ku ah niyad-jabka, oo ka tirsan SSRI-yada.</li>
       <li>Waxay hagaajisaa niyadda, yareysaa walbahaarka iyo welwelka.</li>
     </ul>
   </div>
@@ -138,7 +138,7 @@ a.back span { font-size:1.1rem; }
 
   <ul>
     <li>Sertralin waxaa lagu liqaa <strong>hal koob biyo ah (qiyaas in u dhigan 1.5–2 dl)</strong>.</li>
-    <li>Waxaa fiican in lagu qaato <strong>cuntada kadib</strong> si loo yareeyo calool-xanuunka.</li>
+    <li>Waxaa fiican in lagu qaato <strong>cuntada kadib</strong> - si loo yareeyo calool-xanuunka.</li>
   </ul>
 </div>
 
@@ -164,7 +164,7 @@ a.back span { font-size:1.1rem; }
       <li>Lalabo ama calool-xanuun.</li>
       <li>Madax-xanuun ama wareer.</li>
       <li>Hurdo badan ama hurdo la’aan.</li>
-      <li>Miisaanka oo kordha ama rabitaanka cuntada oo badata (abateedka oo bata).</li>
+      <li>Miisaanka oo kordha, ama rabitaanka cuntada oo badata (abateedka oo bata).</li>
     </ul>
   </div>
 
@@ -177,8 +177,8 @@ a.back span { font-size:1.1rem; }
     <ul>
       <li>Ha isku darin daawooyin hurdo-dejiya kale.</li>
       <li>Aalkoladu waxay xumeeysaa hurdada – ka fogow.</li>
-      <li>Daawooyinka wadnaha iyo dhiig-khafiifinta waxay u baahan karaan la socod.</li>
-      <li>Antibiotiko & antifungal qaarkood waxay kordhiyaan saamaynta Sertralin.</li>
+      <li>Daawooyinka wadnaha iyo dhiig-khafiifinta, waxay u baahan karaan la socod.</li>
+      <li>Antibiotiko & antifungal qaarkood, waxay kordhiyaan saamaynta Sertralin.</li>
     </ul>
   </div>
 
@@ -201,8 +201,8 @@ a.back span { font-size:1.1rem; }
       <div class="section-title">Kaydinta <small>(Opbevaring)</small></div>
     </div>
     <ul>
-      <li>Ku hay meel ka fog carruurta, kana hooseeya 25°C.</li>
-      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiinka & huurka.</li>
+      <li>Ku hay meel ka fog caruurta, kana hooseeya 25°C.</li>
+      <li>Ku hay baakadka asalka ah - si looga ilaaliyo iftiinka & huurka.</li>
       <li>Ha qaadan haddii ay dhaafto “EXP” ama midabka isbeddelo.</li>
       <li>Wixii soo haray → ku celi farmashiyaha.</li>
     </ul>
