--- a/zopiclon.html
+++ b/zopiclon.html
@@ -107,9 +107,10 @@ a.back span { font-size:1.1rem; }
       <div class="section-icon use">💊</div>
       <div class="section-title">Waa maxay Imozop? <small>(Hvad er Imozop?)</small></div>
     </div>
-    <p>
-      Imozop waa daawo hurdo oo loo isticmaalo hurdo la’aanta muddo gaaban.
-    </p>
+ <ul>
+  <li>🛏 <strong>Imozop waa daawo hurdo oo loo isticmaalo hurdo la’aanta muddo gaaban.</strong></li>
+</ul>
+
   </div>
 
   <!-- SIDA LOO QAATO -->
