--- a/sertralin.html
+++ b/sertralin.html
@@ -125,7 +125,7 @@ a.back span { font-size:1.1rem; }
       <li>Qiyaasta ugu badan waa 200 mg maalintii.</li>
       <li>Badanaa waxay shaqeysaa 2–4 toddobaad gudahood; saameyn buuxda 6–8 toddobaad.</li>
       <li>Sertralin waxaa lagu liqaa biyo.</li>
-      <li>Waxaa fiican in lagu qaato cuntada kadib si calool-xanuunka loo yareeyo.</li>
+      <li>Waxaa fiican in lagu qaato cuntada ka dib, si calool-xanuunka loo yareeyo.</li>
     </ul>
   </div>
 
@@ -138,7 +138,7 @@ a.back span { font-size:1.1rem; }
 
   <ul>
     <li>Sertralin waxaa lagu liqaa <strong>hal koob biyo ah (qiyaas in u dhigan 1.5–2 dl)</strong>.</li>
-    <li>Waxaa fiican in lagu qaato <strong>cuntada kadib</strong> - si loo yareeyo calool-xanuunka.</li>
+    <li>Waxaa fiican in lagu qaato <strong>cuntada ka dib</strong> - si loo yareeyo calool-xanuunka.</li>
   </ul>
 </div>
 
