--- a/lamotrigin.html
+++ b/lamotrigin.html
@@ -160,7 +160,7 @@ a.back span { font-size:1.1rem; }
     </div>
     <ul>
       <li>Madax-xanuun, wareer ama daal.</li>
-      <li>Lallabbo ama calool-wareem khafiif ah.</li>
+      <li>Lalabo ama calool-wareem khafiif ah.</li>
       <li>Hurdo badan ama hurdo la’aan.</li>
       <li>Gariir (tremor) ama dhaqdhaqaaq aan caadi ahayn.</li>
     </ul>
@@ -175,9 +175,9 @@ a.back span { font-size:1.1rem; }
     </div>
     <ul>
       <li>Daawooyinka ka hortagga suuxdinta qaarkood (valproat) waxay kordhin karaan saamaynta Lamotrigin.</li>
-      <li>Warfarin iyo daawooyinka dhiig-khafiifinta qaarkood waxay u baahan yihiin la socod.</li>
-      <li>Antibiotiko iyo daawooyinka fangaska qaarkood waxay saameyn karaan Lamotrigin.</li>
-      <li>Had iyo jeer dhakhtarka u sheeg daawo kasta oo kale oo aad qaadanayso.</li>
+      <li>Warfarin iyo daawooyinka dhiig-khafiifinta qaarkood, waxay u baahan yihiin la socod.</li>
+      <li>Antibiotiko iyo daawooyinka fangaska qaarkood, waxay saameyn karaan Lamotrigin.</li>
+      <li>Had iyo jeer dhakhtarka u sheeg daawo kasta, oo kale oo, aad qaadanayso.</li>
     </ul>
   </div>
 
@@ -190,7 +190,7 @@ a.back span { font-size:1.1rem; }
   </div>
 
   <ul>
-    <li>Ka hor Ramadaanka, la hadal dhakhtarkaaga si loo hubiyo in daawadaadu ku habboon tahay inta lagu jiro soonka.</li>
+    <li>Ka hor Ramadaanka, la hadal dhakhtarkaaga, si loo hubiyo in daawadaadu ku habboon tahay inta lagu jiro soonka.</li>
 
     <li>Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (afurka kadib)</strong> ama <strong>suxuurta</strong>.  
         Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.</li>
@@ -207,7 +207,7 @@ a.back span { font-size:1.1rem; }
       <div class="section-title">Kaydinta <small>(Opbevaring)</small></div>
     </div>
     <ul>
-      <li>Ku hay meel ka fog carruurta yar yar, kana hooseysa 25 °C.</li>
+      <li>Ku hay meel ka fog caruurta yar yar, kana hooseysa 25 °C.</li>
       <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.</li>
       <li>Ha qaadan daawada marka ay dhaafto taariikhda “EXP” ama haddii midabku isbeddelo.</li>
       <li>Wixii soo haray → ku celi farmashiyaha.</li>
