--- a/morfin_injektion.html
+++ b/morfin_injektion.html
@@ -254,7 +254,7 @@ a.back span {
         <div class="section-title">Waxyeellooyinka <small>(Bivirkninger)</small></div>
       </div>
       <ul>
-        <li>Lulmo, hurdo badan, lalabo iyo matag waa caadi.</li><li>Xad-dhaafku wuxuu sababi karaa neefsasho gaabis ah, faruuraha oo buluug noqda ama miyir-beel – raadi gargaar degdeg ah (wac 112).</li>
+        <li>Lulmo, hurdo badan, lalabo iyo matag waa caadi.</li><li>Daawada ood si xad-dhaaf ah u qaadatit, waxeey keenikartaa neefsashada oo ku dhibta, faruuraha oo buluug noqda ama miyir-beel – raadi gargaar degdeg ah (wac 112).</li>
       </ul>
     </div>
     
