--- a/morfin_injektion.html
+++ b/morfin_injektion.html
@@ -274,7 +274,7 @@ a.back span {
         <div class="section-title">Digniino <small>(Advarsler)</small></div>
       </div>
       <ul>
-        <li>Dad waayeel ah ama leh cudur sambab (astma, KOL), ama wadnaha ayaa u baahan kormeer dhow.</li><li>Kormeer neefsashada iyo heerka lulmada, si joogto ah, haddii morfin injektion loo isticmaalo guriga.</li>
+        <li>Dadka waayeelka ah, ama leh sambab xanuun (astma, KOL), ama wadnaha ka buka.</li><li>Waxay u baa'hanjihiin kormeer joogta ah, si joogto ah, haddii morfin injektion lagu isticmaalaayo guriga.</li>
       </ul>
     </div>
     
