--- a/melatonin.html
+++ b/melatonin.html
@@ -156,7 +156,7 @@ a.back span { font-size: 1.1rem; }
 
   <ul>
     <li>Daawada waxaa la qaataa <strong>hal mar maalintii</strong>, <strong>inta aadan cunteen, ama cuntada ka dib</strong>.</li>
-    <li>Waxaa lagu liqaa iyadoo lala cabbo <strong>hal koob biyo ah (qiyaas ahan 1.5–2 dl)</strong>.</li>
+    <li>Waxaa lagu liqaa <strong>hal koob oo biyo ah (qiyaas ahan 1.5–2 dl)</strong>.</li>
   </ul>
 </div>
 
