--- a/sertralin.html
+++ b/sertralin.html
@@ -190,7 +190,7 @@ a.back span { font-size:1.1rem; }
     </div>
     <ul>
       <li>La hadal dhakhtar ka hor Ramadaan.</li>
-      <li>Waxaa lagu qaadan karaa fiidkii (afurka ka dib), haddii laguu qoro.</li>
+      <li>Waxaa la qaadan karaa fiidkii (afurka ka dib), haddii laguu qoro.</li>
     </ul>
   </div>
 
