--- a/quetiapin.html
+++ b/quetiapin.html
@@ -105,7 +105,7 @@ p { margin-top:10px; margin-bottom:10px; }
   </div>
 
   <ul>
-  <li><span style="margin-right: 4px;">🧠</span><strong>Quetiapin waxaa loo isticmaalaa daaweynta ciladda dhimirka ee “skizofreni”</strong> – xaalad qofka ku keenta fikir qaldan, shaki badan, maqalka wax aan jirin (hallucinationer) iyo fikir isku dhex yaacsan.</li>
+  <li><span style="margin-right: 4px;">🧠</span><strong>Quetiapin waxaa loo isticmaalaa daaweynta ciladda dhimirka ee “skizofreni”</strong> – xaalad qofka ku keenta fikir qaldan, shaki badan, iyo in oo maqlo wax aan jirin (hallucinationer) iyo fikir isku dhex yaacsan.</li>
   <li><span style="margin-right: 4px;">🌀</span>Waxaa kale oo loo isticmaalaa <strong>xanuunka laba-cirifoodka (bipolar)</strong>.</li>
 </ul>
 
@@ -141,7 +141,7 @@ p { margin-top:10px; margin-bottom:10px; }
       <br><strong>Dayactirka:</strong> 300–750 mg maalintii, oo loo qaybiyo 2 jeer maalintii.
     </li>
 
-    <li><strong>Kiniinnada sii-daynta gaabiska ah (Depottabletter)</strong>:
+    <li><strong>Kiniinnada la falgalka gaaban (Depottabletter)</strong>:
       <br>Hal mar maalintii, ugu yaraan 1 saac ka hor cuntada.
       <br>Maalinta 1aad: 300 mg
       <br>Maalinta 2aad: 600 mg
