--- a/sertralin.html
+++ b/sertralin.html
@@ -176,7 +176,7 @@ a.back span { font-size:1.1rem; }
     </div>
     <ul>
       <li>Ha isku darin daawooyin hurdo-dejiya kale.</li>
-      <li>Aalkoladu waxay xumeeysaa hurdada – ka fogow.</li>
+      <li>Khamrada waxay xumeeysaa hurdada – ka fogow.</li>
       <li>Daawooyinka wadnaha iyo dhiig-khafiifinta, waxay u baahan karaan la socod.</li>
       <li>Antibiotiko & antifungal qaarkood, waxay kordhiyaan saamaynta Sertralin.</li>
     </ul>
