--- a/diclofenac.html
+++ b/diclofenac.html
@@ -245,7 +245,7 @@ a.back span {
         <div class="section-title">Qiyaasta <small>(Dosering)</small></div>
       </div>
       <ul>
-        <li>Caadiyan 50 mg 2–3 jeer maalintii, ama nooc halmar, la waada qaato maalintii.</li><li>Qiyaasta saxda ah waxaa go'aamiya dhakhtarka.</li>
+        <li>2–3 jeer maalinkii 50-200 mg.</li><li>Qiyaasta saxda ah waxaa go'aamiya dhakhtarka.</li>
       </ul>
     </div>
     
@@ -285,7 +285,7 @@ a.back span {
         <div class="section-title">Ramadaan iyo soonka <small>(Ramadan og faste)</small></div>
       </div>
       <ul>
-        <li>Kaniiniga diclofenac wuxuu jebiyaa soonka.</li><li>Jel-ka maqaarka la mariyo badanaa looma tixgeliyo jebin soon, laakiin la hadal wadaad haddii aad shaki ka qabto.</li>
+        <li>Kaniiniga diclofenac wuxuu jebiyaa soonka.</li><li>Gel-ka maqaarka la mariyo badanaa looma tixgeliyo jebin soon, laakiin la hadal wadaad haddii aad shaki ka qabto.</li>
       </ul>
     </div>
     
