--- a/paracetamol.html
+++ b/paracetamol.html
@@ -275,7 +275,7 @@ a.back span {
         <div class="section-title">Digniino <small>(Advarsler)</small></div>
       </div>
       <ul>
-        <li>Ha qaadan qiyaas ka badan tan lagu qoray oo baakadka ku quran, ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aanad ka caafimaadin, ama ka bogsoon 3–5 maalmood gudahood, la xiriir dhakhtarka.</li>
+        <li>Ha qaadan qiyaas ka badan tan lagu qoray baakadka, ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aanad ka caafimaadin, ama ka bogsoon 3–5 maalmood gudahood, la xiriir dhakhtarka.</li>
       </ul>
     </div>
     
