--- a/sertralin.html
+++ b/sertralin.html
@@ -213,7 +213,7 @@ a.back span { font-size:1.1rem; }
 <div class="footer-note">
   Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.<br/>
   (Hvis du har brug for mere information, kontakt apoteket eller din egen læge.)<br/><br/>
-  Qoraalkan waxaa diyaariyay farmashiiste: Ibrahim Dahir Hanaf<br/>
+  Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>
   (Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)
 </div>
 
