--- a/paracetamol.html
+++ b/paracetamol.html
@@ -314,7 +314,7 @@ a.back span {
 </main>
 <div class="footer-note">
   Qoraalkan waxaa diyaariyay farmashiiste: Ibrahim Dahir Hanaf
-<br/>(Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)
+<br/>(Dette materiale er udviklet af farmakonomen: Ibraahim Dahir Xanaf)
 </div>
 </body>
 </html>
