--- a/xarelto.html
+++ b/xarelto.html
@@ -255,7 +255,7 @@ a.back span {
         <div class="section-title">Waxyeellooyinka <small>(Bivirkninger)</small></div>
       </div>
       <ul>
-        <li>Dhiig-bax fudud (sanka, cirridka, cadcaddo).</li><li>Dhiig-bax gudaha ah, oo khatar ah waa dhif; la xiriir dhakhtarka, haddii saxaro madow, ama kaadi gaduud ah ay soo baxaan.</li>
+        <li>Dhiig-bax fudud (sanka, cirridka, nabro oo ka soo baxa jirka meelo kala nooc ah).</li><li>Dhiig-bax gudaha ah, oo khatar ah waa dhif; la xiriir dhakhtarka, haddii saxaro madow, ama kaadi gaduud ah ay soo baxaan.</li>
       </ul>
     </div>
     
