--- a/marevan.html
+++ b/marevan.html
@@ -255,7 +255,7 @@ a.back span {
         <div class="section-title">Waxyeellooyinka <small>(Bivirkninger)</small></div>
       </div>
       <ul>
-        <li>Dhiig-bax fudud: cadcaddo, sanka oo dhiig ka yimaado, ciridka oo dhiig-baxa.</li><li>Dhiig-bax gudaha ah oo khatar ah: saxaro madow, matag dhiig leh, madax-xanuun daran – u baahan isbitaal degdeg ah.</li>
+        <li>Dhiig-bax fudud: nabro oo ka soo baxa jirka meelo kala nooc ah, sanka oo dhiig ka yimaado, ciridka oo dhiig-baxa.</li><li>Dhiig-bax gudaha ah oo khatar ah: saxaro madow, matag dhiig leh, madax-xanuun daran – u baahan isbitaal degdeg ah.</li>
       </ul>
     </div>
     
