--- a/hjertemagnyl.html
+++ b/hjertemagnyl.html
@@ -251,7 +251,7 @@ a.back span {
         <div class="section-title">Waxyeellooyinka <small>(Bivirkninger)</small></div>
       </div>
       <ul>
-        <li>Caloosha oo ku xanuunta, xiritaanka marinnada hawada, laabjeex ama lalabo.</li><li>Khatarta <span class='highlight'>dhiig-baxa</span> ee sare: cadcaddo (nabar) fudud, sanka ama cirridka oo dhiig ka yimaado, saxaro madow – wac dhakhtar haddii ay dhacaan.</li>
+        <li>Caloosha oo ku xanuunta, xiritaanka marinnada hawada, laabjeex ama lalabo.</li><li>Khatarta <span class='highlight'>dhiig-baxa</span> ee sare: nabro oo ka soo baxa jirka meelo kala nooc ah, sanka ama cirridka oo dhiig ka yimaado, saxaro madow – wac dhakhtarkaaga haddii ay dhacaan.</li>
       </ul>
     </div>
     
