--- a/lamotrigin.html
+++ b/lamotrigin.html
@@ -3,63 +3,43 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Lamotrigin – suuxdin & laba-cirifood</title>
+<title>Lamotrigin</title>
 
 <style>
-/* -------------- UNIVERSALT DESIGN (SAMME SOM ANDRE) -------------- */
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
 header { background:linear-gradient(135deg,#0066cc,#00a676); color:#fff; padding:22px 16px; text-align:center; box-shadow:0 2px 8px rgba(0,0,0,0.15);}
 header h1 { margin:0 0 4px; font-size:1.8rem; }
 header p { margin:0; font-size:0.95rem; }
 main { max-width:820px; margin:18px auto 32px; padding:0 14px; }
-a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; 
-         text-decoration:none; color:#00509e; font-size:0.9rem; }
+a.back { display:inline-flex; align-items:center; gap:6px; margin-bottom:14px; text-decoration:none; color:#00509e; font-size:0.9rem; }
 a.back span { font-size:1.1rem; }
 
+.langbar{
+  display:flex; align-items:center; gap:10px; flex-wrap:wrap;
+  background:#ffffff; border-radius:12px; padding:10px 12px;
+  margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
+  border-left:4px solid #00a676;
+}
+.langbar label{ font-size:0.9rem; font-weight:600; }
+.langbar select{
+  padding:7px 10px; border-radius:10px;
+  border:1px solid #d0d7e2; font-size:0.9rem;
+}
+
 .card {
-  background:#ffffff;
-  border-radius:14px;
-  padding:16px 16px 10px;
-  margin-bottom:14px;
+  background:#ffffff; border-radius:14px;
+  padding:16px 16px 10px; margin-bottom:14px;
   box-shadow:0 3px 10px rgba(15,23,42,0.12);
   border-top:4px solid #00a676;
 }
 
-/* META INFO */
-.drug-meta { display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
-.drug-info { display:flex; align-items:center; gap:10px; }
-.drug-icon { width:44px; height:44px; border-radius:12px; background:#e3f2fd; display:flex; align-items:center; justify-content:center; }
-.drug-icon svg { width:30px; height:30px; }
-.drug-name { font-weight:600; font-size:0.95rem; }
-.drug-form { font-size:0.82rem; color:#29516e; }
-.badge { background:#d9f6e8; color:#16634a; padding:4px 10px; border-radius:999px; font-size:0.8rem; }
-
-/* SECTIONS */
 .section { margin-top:8px; padding-top:8px; border-top:1px dashed #d0d7e2; }
-.section-header { display:flex; align-items:center; gap:8px; margin-bottom:4px; }
-.section-title { font-weight:700; font-size:0.96rem; color:#123047; }
-.section-title small { font-weight:400; color:#607089; }
+.section-title { font-weight:700; font-size:0.96rem; }
+.section ul { margin:0 0 4px 18px; font-size:0.92rem; }
 
-.section-icon { width:24px; height:24px; border-radius:999px; display:inline-flex;
-                align-items:center; justify-content:center; font-size:0.9rem; color:#123047;}
-.section-icon.use { background:#e3f2fd; }
-.section-icon.dose { background:#e2f5ea; }
-.section-icon.side { background:#fff3e0; }
-.section-icon.interact { background:#ede7f6; }
-.section-icon.warn { background:#ffebee; }
-.section-icon.ramadan { background:#e0f7fa; }
-.section-icon.store { background:#edeff9; }
-
-.section ul { margin:0 0 4px 18px; padding-left:0; font-size:0.92rem; }
-.section li { margin-bottom:4px; }
-
-.highlight { font-weight:600; }
-
-.footer-note {
-  font-size:0.8rem;
-  color:#607089;
-  text-align:center;
-  margin:18px 0 10px;
+.footer-note{
+  font-size:0.8rem; color:#607089;
+  text-align:center; margin:18px 0 10px;
 }
 @media(max-width:600px){ header h1{font-size:1.5rem;} }
 </style>
@@ -68,169 +48,166 @@ a.back span { font-size:1.1rem; }
 <body>
 
 <header>
-  <h1>Lamotrigin – suuxdin & laba-cirifood</h1>
-  <p>Waa warbixin kooban oo ku saabsan daawada – loogu talagalay waalidiinta & bukaannada Soomaaliyeed</p>
+  <h1 id="title">Lamotrigin</h1>
+  <p id="subtitle">Kort information om medicinen</p>
 </header>
 
 <main>
 
-<a href="index.html" class="back"><span>←</span><span>Ku laabo liiska daawooyinka</span></a>
+<div class="langbar">
+  <label for="langSelect" id="langLabel">Vælg sprog:</label>
+  <select id="langSelect">
+    <option value="so">Somalisk</option>
+    <option value="da">Dansk</option>
+    <option value="en">Engelsk</option>
+    <option value="ar">Arabisk</option>
+    <option value="tr">Tyrkisk</option>
+    <option value="ur">Urdu</option>
+    <option value="fa">Persisk</option>
+    <option value="prs">Dari</option>
+    <option value="ps">Pashto</option>
+  </select>
+</div>
+
+<a href="index.html" class="back"><span>←</span><span id="backText">Tilbage</span></a>
 
 <div class="card">
 
-  <!-- IKONKA KINIINKA -->
-  <div class="drug-meta">
-    <div class="drug-info">
-      <div class="drug-icon">
-        <svg viewBox="0 0 64 64">
-          <ellipse cx="32" cy="32" rx="22" ry="14" fill="#e8f3ff" stroke="#1a73e8" stroke-width="3"/>
-          <line x1="20" y1="20" x2="44" y2="44" stroke="#1a73e8" stroke-width="4"/>
-        </svg>
-      </div>
-      <div class="drug-labels">
-        <div class="drug-name">Lamotrigin</div>
-        <div class="drug-form">Kiniin afka ah</div>
-      </div>
-    </div>
-    <div class="badge">Akhris kooban</div>
-  </div>
-
-
-<!-- WAA MAXAY -->
 <div class="section">
-  <div class="section-header">
-    <div class="section-icon use">💊</div>
-    <div class="section-title">Waa maxay Lamotrigin? <small>(Hvad er Lamotrigin?)</small></div>
-  </div>
-  <ul>
-    <li>🧠 <strong>Lamotrigin waa daawo ka hortagta suuxdinta (epilepsi).</strong></li>
-    <li>⚡️ Waxay yaraysaa ama ka hortagtaa suuxdin soo noqnoqda iyadoo saameyn ku yeelaysa gudbinta korontada ee maskaxda.</li>
-  </ul>
+  <div class="section-title" id="useTitle">Anvendelse</div>
+  <ul id="useList"></ul>
 </div>
 
-
-
-  <!-- ISTICMAALKA -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon use">✔</div>
-      <div class="section-title">Maxaa loo isticmaalaa? <small>(Hvad bruges det til?)</small></div>
-    </div>
-    <ul>
-      <li>Suuxdinta (epilepsi).</li>
-      <li>Xanuunka laba-cirifoodka (bipolar) – haddii dhakhtarka sidaas kuu qoro.</li>
-    </ul>
-  </div>
-
-
-  <!-- QIYAASTA -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon dose">⏰</div>
-      <div class="section-title">Sida loo qaato <small>(Sådan tages medicinen)</small></div>
-    </div>
-
-    <ul>
-    <li>Qaado sida uu dhakhtarka ku faray. Ha beddelin wakhtiga ama qiyaasta adiga, oo aan la tashan dhakhtarka.</li>
-    <li>Kaniiniga biyo ku liq – daawada hal ama laba jeer maalintii qaado.</li>
-    <li>Si joogto ah u qaado, oo ha ka tagin qiyaaso isdaba joog ah.</li>
-  </ul>
+<div class="section">
+  <div class="section-title" id="warnTitle">Advarsler</div>
+  <ul id="warnList"></ul>
 </div>
 
-
-  <!-- DIGNIINO -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon warn">!</div>
-      <div class="section-title">Digniino <small>(Advarsler)</small></div>
-    </div>
-    <ul>
-      <li>Finan cusub oo jirka ka soo baxa → u sheeg dhakhtarka (waxay noqon kartaa xasaasiyad halis ah).</li>
-      <li>Isbadal niyadeed ama fikirro isdil → isla markiiba la xiriir dhakhtar.</li>
-      <li>Ha joojin daawada si kedis ah.</li>
-    </ul>
-  </div>
-
-
-  <!-- BIVIRKNINGER -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon side">⚠️</div>
-      <div class="section-title">Dhibaatooyinka <small>(Bivirkninger)</small></div>
-    </div>
-    <ul>
-      <li>Madax-xanuun, wareer ama daal.</li>
-      <li>Lalabo ama calool-wareem khafiif ah.</li>
-      <li>Hurdo badan ama hurdo la’aan.</li>
-      <li>Gariir (tremor) ama dhaqdhaqaaq aan caadi ahayn.</li>
-    </ul>
-  </div>
-
-
-  <!-- INTERAKTIONER -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon interact">⇆</div>
-      <div class="section-title">Is-dhexgalka daawooyinka <small>(Interaktioner)</small></div>
-    </div>
-    <ul>
-      <li>Daawooyinka ka hortagga suuxdinta qaarkood (valproat) waxay kordhin karaan saamaynta Lamotrigin.</li>
-      <li>Warfarin iyo daawooyinka dhiig-khafiifinta qaarkood, waxay u baahan yihiin la socod.</li>
-      <li>Antibiotiko iyo daawooyinka fangaska qaarkood, waxay saameyn karaan Lamotrigin.</li>
-      <li>Had iyo jeer dhakhtarka u sheeg daawo kasta, oo kale oo, aad qaadanayso.</li>
-    </ul>
-  </div>
-
-
-  <!-- RAMADAN -->
- <div class="section">
-  <div class="section-header">
-    <div class="section-icon ramadan">☾</div>
-    <div class="section-title">Ramadaanka iyo daawada <small>(Fasten og brugen af medicinen)</small></div>
-  </div>
-
-  <ul>
-    <li>Ka hor Ramadaanka, la hadal dhakhtarkaaga, si loo hubiyo in daawadaadu ku habboon tahay inta lagu jiro soonka.</li>
-
-    <li>Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (afurka ka dib)</strong> ama <strong>suxuurta</strong>.  
-        Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.</li>
-
-    <li>halaba jeer ha qaadan daawada, hana joojin daawada adiga oo aan dhakhtar la tashan.</li>
-  </ul>
+<div class="section">
+  <div class="section-title" id="sideTitle">Bivirkninger</div>
+  <ul id="sideList"></ul>
 </div>
-
-
-  <!-- OPBEVARING -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon store">⧉</div>
-      <div class="section-title">Kaydinta <small>(Opbevaring)</small></div>
-    </div>
-    <ul>
-      <li>Ku hay meel ka fog caruurta yar yar, kana hooseysa 25 °C.</li>
-      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.</li>
-      <li>Ha qaadan daawada marka ay dhaafto taariikhda “EXP” ama haddii midabku isbeddelo.</li>
-      <li>Wixii soo haray → ku celi farmashiyaha.</li>
-    </ul>
-  </div>
 
 </div>
 
-
-<div class="footer-note">
-  Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.
-</div>
-  </div>
-
-</div>
-
-<div class="footer-note">
-  Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.<br/>
-  (Hvis du har brug for mere information, kontakt apoteket eller din egen læge.)<br/><br/>
-  Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>
-  (Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)
-</div>
+<div class="footer-note" id="footerText"></div>
 
 </main>
+
+<script>
+const RTL = new Set(["ar","fa","ur","prs","ps"]);
+
+const T = {
+so:{
+title:"Lamotrigin – suuxdin & laba-cirifood",
+subtitle:"Warbixin kooban oo ku saabsan daawada",
+back:"Ku laabo",
+useTitle:"Isticmaalka",
+use:[
+"Daawo ka hortagta suuxdinta.",
+"Loo isticmaalo laba-cirifoodka."
+],
+warnTitle:"Digniino",
+warn:[
+"Finan cusub → la xiriir dhakhtar.",
+"Ha joojin daawada si kedis ah."
+],
+sideTitle:"Waxyeellooyinka",
+side:[
+"Madax-xanuun iyo wareer.",
+"Lalabo ama hurdo."
+],
+footer:"La xiriir farmashiyaha ama dhakhtarkaaga wixii faahfaahin ah."
+},
+da:{
+title:"Lamotrigin – epilepsi & bipolar",
+subtitle:"Kort information om medicinen",
+back:"Tilbage",
+useTitle:"Anvendelse",
+use:[
+"Forebygger epileptiske anfald.",
+"Anvendes ved bipolar lidelse."
+],
+warnTitle:"Advarsler",
+warn:[
+"Udslæt → kontakt læge straks.",
+"Stop ikke behandlingen pludseligt."
+],
+sideTitle:"Bivirkninger",
+side:[
+"Hovedpine og svimmelhed.",
+"Kvalme eller træthed."
+],
+footer:"Kontakt apoteket eller lægen for mere information."
+},
+en:{
+title:"Lamotrigine – epilepsy & bipolar disorder",
+subtitle:"Short medicine information",
+back:"Back",
+useTitle:"Use",
+use:[
+"Prevents epileptic seizures.",
+"Used in bipolar disorder."
+],
+warnTitle:"Warnings",
+warn:[
+"New rash → seek medical help.",
+"Do not stop suddenly."
+],
+sideTitle:"Side effects",
+side:[
+"Headache and dizziness.",
+"Nausea or fatigue."
+],
+footer:"Contact your pharmacy or doctor for more information."
+}
+};
+
+function setDir(lang){
+document.documentElement.lang=lang;
+document.documentElement.dir=RTL.has(lang)?"rtl":"ltr";
+}
+
+function applyLang(lang){
+const d=T[lang]||T.so;
+setDir(lang);
+
+document.title=d.title;
+document.getElementById("title").textContent=d.title;
+document.getElementById("subtitle").textContent=d.subtitle;
+document.getElementById("backText").textContent=d.back;
+
+document.getElementById("useTitle").textContent=d.useTitle;
+document.getElementById("warnTitle").textContent=d.warnTitle;
+document.getElementById("sideTitle").textContent=d.sideTitle;
+
+function fill(id,arr){
+const ul=document.getElementById(id);
+ul.innerHTML="";
+arr.forEach(t=>{
+const li=document.createElement("li");
+li.textContent=t;
+ul.appendChild(li);
+});
+}
+
+fill("useList",d.use);
+fill("warnList",d.warn);
+fill("sideList",d.side);
+
+document.getElementById("footerText").textContent=d.footer;
+}
+
+const params=new URLSearchParams(window.location.search);
+const startLang=params.get('lang')||'so';
+
+document.getElementById("langSelect").value=T[startLang]?startLang:'so';
+applyLang(document.getElementById("langSelect").value);
+
+document.getElementById("langSelect").addEventListener("change",function(){
+applyLang(this.value);
+});
+</script>
+
 </body>
 </html>
